kubernetes/frontend-demo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-demo-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: frontend-demo-app
          image: raestio/frontend-demo-app
          ports:
            - containerPort: 3000
