kubernetes/data-management-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-management-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: data-management-service
  ports:
    - port: 8080
      targetPort: 8080
