kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend-demo-app-cluster-ip
              servicePort: 3000
          - path: /api/prime-numbers/?(.*)
            backend:
              serviceName: prime-numbers-service-cluster-ip
              servicePort: 8080
          - path: /api/data-management/?(.*)
            backend:
              serviceName: data-management-service-cluster-ip
              servicePort: 8080
